@@ -11,6 +11,11 @@ Changelog
 2.1 (2012-02-27)
 ----------------
 
+- Implements custom sort method for sorting on translated review_states.
+  Issue #1423 Tabbedview Customsort Methode fuer Status Sortierung implementieren
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1423/
+  [phgross]
+
 - SQL listings: ignore all task date columns when filtering (updated helper list).
   [jone]
 
